[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Objects/Board/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Game/UI.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Game/Game.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Games.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Panel" type="Panel" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Board" parent="." instance=ExtResource( 1 )]
position = Vector2( 517, 298 )

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UI_Layer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI_Layer/UI"]
margin_left = 19.0
margin_top = 20.0
margin_right = 170.0
margin_bottom = 99.0

[node name="TurnIndicator" type="Label" parent="UI_Layer/UI/VBoxContainer"]
margin_right = 151.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Player turn"
align = 1

[node name="Player_Turn" type="Label" parent="UI_Layer/UI/VBoxContainer"]
margin_top = 28.0
margin_right = 151.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI_Layer/UI"]
margin_left = 805.0
margin_top = 566.0
margin_right = 1019.0
margin_bottom = 596.0

[node name="Label" type="Label" parent="UI_Layer/UI/HBoxContainer"]
margin_top = 8.0
margin_right = 188.0
margin_bottom = 22.0
text = "Made with Godot 3.5.1.stable"

[node name="TextureRect" type="TextureRect" parent="UI_Layer/UI/HBoxContainer"]
margin_left = 192.0
margin_right = 214.0
margin_bottom = 30.0
size_flags_horizontal = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Win" type="Control" parent="UI_Layer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UI_Layer/Win"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -149.0
margin_right = 231.0
margin_bottom = 149.0

[node name="Panel2" type="Panel" parent="UI_Layer/Win/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.0
margin_top = -140.0
margin_right = 222.0
margin_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI_Layer/Win/Panel/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 36
alignment = 1

[node name="PlayerWinLable" type="Label" parent="UI_Layer/Win/Panel/Panel2/VBoxContainer"]
margin_top = 60.0
margin_right = 444.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 3 )
text = "Player 1 Wins!"
align = 1

[node name="PlayAgain" type="Button" parent="UI_Layer/Win/Panel/Panel2/VBoxContainer"]
margin_left = 122.0
margin_top = 139.0
margin_right = 322.0
margin_bottom = 219.0
rect_min_size = Vector2( 200, 80 )
size_flags_horizontal = 4
text = "Play again?"

[node name="Stalemate" type="Control" parent="UI_Layer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UI_Layer/Stalemate"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -149.0
margin_right = 231.0
margin_bottom = 149.0

[node name="Panel2" type="Panel" parent="UI_Layer/Stalemate/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.0
margin_top = -140.0
margin_right = 222.0
margin_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI_Layer/Stalemate/Panel/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 36
alignment = 1

[node name="StalemateLabel" type="Label" parent="UI_Layer/Stalemate/Panel/Panel2/VBoxContainer"]
margin_top = 60.0
margin_right = 444.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 3 )
text = "Draw! :("
align = 1

[node name="PlayAgain" type="Button" parent="UI_Layer/Stalemate/Panel/Panel2/VBoxContainer"]
margin_left = 122.0
margin_top = 139.0
margin_right = 322.0
margin_bottom = 219.0
rect_min_size = Vector2( 200, 80 )
size_flags_horizontal = 4
text = "Play again?"

[connection signal="PlayerChange" from="Board" to="." method="_on_Board_PlayerChange"]
[connection signal="Stalemate" from="Board" to="." method="_on_Board_Stalemate"]
[connection signal="Win" from="Board" to="." method="_on_Board_Win"]
[connection signal="pressed" from="UI_Layer/Win/Panel/Panel2/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="UI_Layer/Stalemate/Panel/Panel2/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
